src/containers/Hero/styles.scss
/*
    ------------------------
    -------- Hero ----------
    ------------------------
*/

@import '../../styles/app.scss';

.hero{
    transform: translateY(-80px);
    position: relative;

    &__bg-img{
        position: absolute;
        right: 0;
        width: 100%;
        z-index: var(--z-back);
    }

    &__text-container{
        text-align: center;
        max-width: 447px;
        margin: 0 auto;

        .heading {
            margin-bottom: var(--space-sm);
        }

        p{
            margin-bottom: var(--space-lg);
        }
    }

    // Desktop
    @include breakpoint-up(large){

        @include flex(sb, c, row);
        transform: initial;
        padding: 170px 0;

        &__text-container{
            text-align: initial;
            margin: initial;

            .heading{
                margin-bottom: var(--space-md);
            }

            p{
                margin-bottom: 2rem;
            }
        }

        &__img-container{
            order: 2;
            right: 0;
            top: -125px;
            max-width: 728.57px;
            position: absolute;
            z-index: var(--z-tooltip);
            overflow-x: hidden;

            img{
                transform: translateX(125px);
            }
        }

        &__bg-img{
            width: initial;
            top: -80px;
            right: 0;
        }
    }
}

